[package]
name = "kaios_examples"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dev-dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
miniquad = { git = "https://github.com/not-fl3/miniquad.git" }
egui = { version = "0.27", features = ["bytemuck"] }
egui-miniquad = { git = "https://github.com/birhburh/egui-miniquad.git", branch = "blocking_event_loop"}
egui_demo_lib = { version = "0.27", default-features = false }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tracing-subscriber = "0.3"

[patch.crates-io]
miniquad = { git = "https://github.com/not-fl3/miniquad.git" } # keep in sync with above